# ceviche-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: build.yaml
cli/: Cargo.toml
cli/src/: main.rs
cmdlet/: Cargo.toml  build.rs
cmdlet/src/: main.rs  pwsh.rs  service.rs
example_service/: Cargo.toml
example_service/src/: main.rs
examples/cmdlet/: Cargo.toml
examples/cmdlet/src/: main.rs  service.json
examples/foobar/: Cargo.toml
src/: NTService.c  NTService.h  cli.yml  controller.rs  factory.rs  lib.rs  main.c  main.rs  service.rs  session.rs
src/controller/: dummy.rs  linux.rs  macos.rs  mod.rs  windows.rs
