[package]
name = "ceviche"
version = "0.3.2"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/ceviche-rs"
repository = "https://github.com/wayk/ceviche-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>", "Sébastien Duquette <sduquette@devolutions.net>"]
keywords = ["daemon", "service"]
description = "Rust daemon/service wrapper"
exclude = [
    ".*",
    "appveyor.yml"
]

[dependencies]
cfg-if = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winerror", "winuser", "winsvc", "libloaderapi", "errhandlingapi"] }
widestring = {version = "0.3"}

[target.'cfg(target_os = "linux")'.dependencies]
systemd-rs = "^0.1.2"