[package]
name = "ceviche"
version = "0.4.3"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/ceviche-rs"
repository = "https://github.com/wayk/ceviche-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>", "Sébastien Duquette <sduquette@devolutions.net>", "Richard Markiewicz <rmarkiewicz@devolutions.net>"]
keywords = ["daemon", "service"]
description = "Rust daemon/service wrapper"
exclude = [
    ".*",
    "appveyor.yml"
]

[dependencies]
cfg-if = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winerror", "winuser", "winsvc", "libloaderapi", "errhandlingapi"] }
widestring = {version = "0.3"}

[target.'cfg(target_os = "linux")'.dependencies]
systemd-rs = "^0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
core-foundation = "0.7.0"
core-foundation-sys = "0.7.0"
core-graphics = "0.19.0"
system-configuration-sys = "0.4.1"
block = "0.1.6"
num-traits = "0.2"
num-derive = "0.2"
timer = "0.2"
chrono = "0.4"
libc = "0.2"
