[package]
name = "ceviche"
version = "0.5.2"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/ceviche-rs"
repository = "https://github.com/wayk/ceviche-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>", "Sébastien Duquette <sduquette@devolutions.net>", "Richard Markiewicz <rmarkiewicz@devolutions.net>"]
keywords = ["daemon", "service"]
description = "Rust daemon/service wrapper"
exclude = [
    ".*",
    "appveyor.yml"
]

[dependencies]
cfg-if = "1"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winerror", "winuser", "winsvc", "libloaderapi", "errhandlingapi"] }
widestring = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-rs = "^0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
system-configuration-sys = "0.5"
timer = "0.2"
chrono = "0.4"
libc = "0.2"
