[package]
name = "foobar_service"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/ceviche-rs"
repository = "https://github.com/wayk/ceviche-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
keywords = ["daemon", "service"]
description = "Rust daemon/service wrapper"

[[bin]]
name = "foobar"
path = "src/main.rs"

[dependencies]
libc = "0"
log = "0.4"
log4rs = "0.8"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = "3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winuser", "winsvc", "libloaderapi", "errhandlingapi", "winerror"] }

[dependencies.ceviche]
path = "../.."
